cleaning up the login page

--- a/frontend/login.gotemplate.html
+++ b/frontend/login.gotemplate.html
@@ -3,6 +3,7 @@
 <div class="horizontal space-around">
   <form action="/" method="POST" class="box vertical">
     <h3>login</h3>
+    <em>log in with your {{ .MatrixServerPublicDomain }} matrix account</em>
     <input type="text" name="username" placeholder="username"></input>
     <input type="password" name="password" placeholder="password"></input>
     
