--- a/frontend/panel.gotemplate.html
+++ b/frontend/panel.gotemplate.html
@@ -13,7 +13,7 @@
 
   <div class="chart-container">
     <h3>matrix rooms</h3>
-    <canvas id="chart2"></canvas>
+    <canvas id="chart3"></canvas>
   </div>
 
 </div> 
@@ -33,8 +33,8 @@
     data: {
       labels: ["Postgres DB", "Matrix Media", "Other", "Free Space" ],
       datasets: [{
-        label: 'bytes',
-        data: [diskUsage.PostgresBytes, diskUsage.MediaBytes, diskUsage.OtherBytes, freeSpace],
+        label: 'GB',
+        data: [diskUsage.PostgresBytes, diskUsage.MediaBytes, diskUsage.OtherBytes, freeSpace].map(x => x / 1000000000),
         borderWidth: 2
       }]
     },
