--- a/frontend/panel.gotemplate.html
+++ b/frontend/panel.gotemplate.html
@@ -51,22 +51,22 @@
      return b.Bytes - a.Bytes;
   });
 
-  const top6 = dbTableSizes.slice(0, 5);
-  const others = dbTableSizes.slice(5, dbTableSizes.length)
-  top6.push({
+  const top8Tables = dbTableSizes.slice(0, 7);
+  const others = dbTableSizes.slice(7, dbTableSizes.length)
+  top8Tables.push({
     Name: "others",
     Bytes: others.reduce((accumulator, table) => accumulator + table.Bytes, 0)
   })
 
-  const totalBytes = top6.reduce((accumulator, table) => accumulator + table.Bytes, 0);
+  const totalBytes = top8Tables.reduce((accumulator, table) => accumulator + table.Bytes, 0);
 
   new Chart(document.getElementById('chart2'), {
     type: 'doughnut',
     data: {
-      labels: top6.map(table => table.Name),
+      labels: top8Tables.map(table => table.Name),
       datasets: [{
         label: 'filesize %',
-        data: top6.map(table => Math.round((table.Bytes/totalBytes)*100)),
+        data: top8Tables.map(table => Math.round((table.Bytes/totalBytes)*100)),
         borderWidth: 2
       }]
     },
@@ -83,22 +83,22 @@
      return b.rows - a.rows;
   });
 
-  const top8 = rooms.slice(0, 7);
+  const top8Rooms = rooms.slice(0, 7);
   const otherRooms = rooms.slice(7, rooms.length)
-  top8.push({
+  top8Rooms.push({
     roomid: "others",
     rows: otherRooms.reduce((accumulator, table) => accumulator + table.rows, 0)
   })
 
-  const totalRows = top8.reduce((accumulator, table) => accumulator + table.rows, 0);
+  const totalRows = top8Rooms.reduce((accumulator, table) => accumulator + table.rows, 0);
 
   new Chart(document.getElementById('chart3'), {
     type: 'doughnut',
     data: {
-      labels: top6.map(table => table.roomid),
+      labels: top8Rooms.map(table => table.roomid),
       datasets: [{
         label: '%',
-        data: top6.map(table => Math.round((table.rows/totalRows)*100)),
+        data: top8Rooms.map(table => Math.round((table.rows/totalRows)*100)),
         borderWidth: 2
       }]
     },
