--- a/frontend/panel.gotemplate.html
+++ b/frontend/panel.gotemplate.html
@@ -1,19 +1,19 @@
 
-<div class="horizontal">
+<div class="horizontal justify-center wrap">
 
   <div class="chart-container">
     <h3>disk space</h3>
-    <canvas id="chart1"></canvas>
+    <canvas id="chart1" width="350" height="550"></canvas>
   </div>
 
   <div class="chart-container">
     <h3>database tables</h3>
-    <canvas id="chart2"></canvas>
+    <canvas id="chart2" width="350" height="550"></canvas>
   </div>
 
   <div class="chart-container">
     <h3>matrix rooms</h3>
-    <canvas id="chart3"></canvas>
+    <canvas id="chart3" width="350" height="550"></canvas>
   </div>
 
 </div> 
