--- a/frontend/page.gotemplate.html
+++ b/frontend/page.gotemplate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>matrix-synapse diskspace janitor</title>
+  <title>diskspace janitor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="shortcut icon" href="/static/favicon.png" />
