--- a/frontend/panel.gotemplate.html
+++ b/frontend/panel.gotemplate.html
@@ -73,7 +73,7 @@
   </form>
 </div>
 
-<script src="static/vendor/chart.js"></script>
+<script src="static/vendor/chart.umd.js"></script>
 <script>
 
   const diskUsage = {{ .DiskUsage }};
